--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StudentFU">
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".presentaiton.MainActivity"
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
