Добавил взаимодействие с сетью в модуль. Начал добавление классов серверных моделей

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ android {
         debug{
             minifyEnabled true
             buildConfigField "String", "STUDENT_API_URL", "\"http://10.0.2.2/api/v1/\""
-            buildConfigField "String", "RUZ_API_URL", "\"http://ruz.fa.ru/api/v1/\""
+            buildConfigField "String", "RUZ_API_URL", "\"https://ruz.fa.ru/api/\""
         }
 
         release {
