--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    // ?
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
     // navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
