Создал всю навигацию. Создал структуру presentation слоя. Верстка профиля и элемента расписания. Базовый фрагмент и базовый флоу-фрагмент

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,7 @@ dependencies {
     // Retrofit
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    // ViewBindingPropertyDelegate
+    implementation 'com.github.kirich1409:viewbindingpropertydelegate:1.5.3'
+
 }
