--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
     buildTypes {
         debug{
             minifyEnabled true
-            buildConfigField "String", "STUDENT_API_URL", "\"http://10.0.2.2/api/v1/\""
+            buildConfigField "String", "STUDENT_API_URL", "\"http://10.0.2.2:8000/api/v1/\""
             buildConfigField "String", "RUZ_API_URL", "\"https://ruz.fa.ru/api/\""
         }
 
@@ -80,5 +80,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
     // ViewBindingPropertyDelegate
     implementation 'com.github.kirich1409:viewbindingpropertydelegate:1.5.3'
-
+    // Logging interceptor
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.3"
 }
