--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def lifecycle_version = "2.4.1"
     def koin_version= "3.2.0-beta-1"
+    def fast_adapter_version = "5.6.0"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
@@ -86,4 +87,8 @@ dependencies {
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    // Fast Adapter
+    implementation "com.mikepenz:fastadapter:$fast_adapter_version"
+    implementation "com.mikepenz:fastadapter-extensions-binding:$fast_adapter_version"
+    implementation "com.mikepenz:fastadapter-extensions-diff:$fast_adapter_version"
 }
